# pulsar-mobile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tauri-plugin-pulsar-video/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-pulsar-video/android/: build.gradle.kts
crates/tauri-plugin-pulsar-video/android/src/main/: AndroidManifest.xml
crates/tauri-plugin-pulsar-video/android/src/main/java/: HostEncoder.kt  HostService.kt  NotifI18n.kt  PulsarA11yService.kt  PulsarVideoPlugin.kt  StreamService.kt
crates/tauri-plugin-pulsar-video/android/src/main/res/values/: strings.xml
crates/tauri-plugin-pulsar-video/android/src/main/res/xml/: pulsar_a11y.xml
crates/tauri-plugin-pulsar-video/permissions/: default.toml
crates/tauri-plugin-pulsar-video/permissions/autogenerated/: reference.md
crates/tauri-plugin-pulsar-video/permissions/autogenerated/commands/: gamepad_battery.toml  get_video_size.toml  get_wallpaper_avatar.toml  mic_start.toml  mic_stop.toml  play_test.toml  screen_refresh_rate.toml  set_aspect.toml  set_audio_muted.toml  set_orientation.toml  set_video_transform.toml
crates/tauri-plugin-pulsar-video/permissions/schemas/: schema.json
crates/tauri-plugin-pulsar-video/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
mobile/: .gitignore  Cargo.toml  GAP-REPORT.json  HANDOFF.md  IMPLEMENTATION-PLAN.md  package.json  tauri.conf.json
mobile/capabilities/: default.json
mobile/icons/: icon.icns
mobile/scripts/: patch-android-signing.py  patch-android-splash.py
mobile/src/: client.rs  config.rs  datachan.rs  host.rs  identity.rs  input_cmds.rs  lib.rs  main.rs  net.rs  relay_cmds.rs  rtp.rs  session_cmds.rs
mobile/ui/: fonts.css  index.html  licenses.json
mobile/ui/css/: components.css  tokens.css
mobile/ui/js/: app.js  gamepad-nav.js  i18n.js  router.js  sheet-swipe.js  tauri.js  theme.js  toast.js
mobile/ui/js/i18n/: en.js  kk.js  ru.js  tr.js
mobile/ui/js/screens/: connect.js  connecting.js  devices.js  games.js  host.js  settings.js
mobile/ui/js/session/: audio.js  display.js  files.js  gamepad-monitor.js  gamepad.js  hud.js  input.js  keyboard.js  overlay.js  quality.js  session.js  sidechannels.js  split.js
mobile/ui/js/store/: config.js  peerMeta.js  peers.js  prefs.js
