[package]
name = "pulsar-mobile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pulsar mobile app (Android + iOS) — client-only Tauri shell. Stays thin so it cross-compiles to Android/iOS; desktop-only crates (SDL3, ffmpeg, relay, gtk/x11, arboard, rfd, libmpv) live in pulsar-tauri, not here."

# The Android/iOS shell loads this crate as a shared lib and calls the
# `mobile_entry_point` export; `cdylib` is the mobile artifact, `staticlib` is
# used by the iOS build, `rlib` lets `main.rs` (desktop sanity run) link it.
[lib]
name = "pulsar_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pulsar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-pulsar-video = { path = "../crates/tauri-plugin-pulsar-video" }
# W4-files-js: OS document-picker for file upload (send_file command)
tauri-plugin-dialog = "2"
# M4: transport (P2P→relay) + crypto + service protocol. Compiles for android
# (host-injection deps are cfg(target_os="linux"), which android is not).
pulsar-core = { path = "../crates/pulsar-core" }
# Local relay: run the rendezvous/relay server on THIS device (Settings → Ağ →
# "Yerel relay"). The relay lib is portable (tokio UDP, no host-only deps), so it
# embeds on Android — other LAN devices then point their relay at this phone.
pulsar-relay = { path = "../../relay" }
serde = { workspace = true }
# Keepalive timer wrapping the session recv (independent of frame arrival).
tokio = { workspace = true }
log = "0.4"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Route log records (incl. the client read-loop counters) to Android logcat.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
