[package]
name = "tauri-plugin-pulsar-video"
version = "0.1.0"
authors = [ "Pulsar contributors" ]
description = "Pulsar mobile: native video SurfaceView under a transparent Tauri webview (Android/iOS)."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-pulsar-video"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0"
thiserror = "2"
# Encode video access units as base64 to hand them across the Rust→Kotlin plugin
# bridge (run_mobile_plugin serializes payloads as JSON; raw Vec<u8> would bloat).
base64 = "0.22"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
